Login button && Error msg
Falta cambiar el mensaje de error según cual sea

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">FullBus</string>
+
+    <!-- Errores -->
+    <string name="email_required">El correo es obligatorio</string>
+    <string name="password_short">La contraseña debe tener minimo 6 caracteres</string>
+    <string name="register_error">Error durante el registro</string>
 </resources>
