--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="password_short">La contraseña debe tener al menos 6 caracteres</string>
     <string name="username_taken">El nombre de usuario ya está en uso</string>
     <string name="register_error">Error en el registro</string>
-    <string name="error_unknown">Ha ocurrido un error desconocido. Por favor, inténtalo de nuevo</string>
+    <string name="unknown_error">Ha ocurrido un error desconocido. Por favor, inténtalo de nuevo</string>
     <string name="email_in_use">El correo electrónico ya está en uso</string>
     <string name="error_firestore">Error de la base de datos</string>
     <string name="error_login">Error desconocido al iniciar sesion. Por favor, intentelo de nuevo</string>
